Session variables, equal temperment, octave switch

--- a/client/notepad.jade
+++ b/client/notepad.jade
@@ -2,6 +2,7 @@ head
   title NotePad
   meta(name='viewport' content='width=device-width')
   link(href='http://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css')
+  link(rel='stylesheet' href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css')
   script(src='//cdn.jsdelivr.net/phaser/2.2.2/phaser.js')
     
 body
@@ -12,6 +13,12 @@ template(name='notepad')
     .header.z-depth-1
       | NotePad
     .menu.z-depth-2
+      .octave 
+        .label OCTAVE
+        .value #{octave}
+        .controls
+          i.fa.fa-chevron-left
+          i.fa.fa-chevron-right
+
     canvas#reveal-layer.notepad.z-depth-2
     canvas#touch-layer.notepad.z-depth-3
-    
