--- a/client/notepad/notepad.jade
+++ b/client/notepad/notepad.jade
@@ -89,6 +89,7 @@ template(name='notepad')
           a.waves-effect.waves-light.btn.modal-trigger(class='{{active}}' href='#save') SAVE
 
     .second-menu.menu(class='{{active}}')
+      +whatever
 
     canvas#reveal-layer.notepad.z-depth-2
     canvas#touch-layer.notepad.z-depth-3
