--- a/client/notepad/notepad.jade
+++ b/client/notepad/notepad.jade
@@ -89,8 +89,8 @@ template(name='notepad')
           a.waves-effect.waves-light.btn.modal-trigger(class='{{active}}' href='#save') SAVE
 
     .second-menu.menu(class='{{active}}')
-      button#playChordProgressionButton(disabled='true') Loading
-      
+      button#playChordProgressionButton(disabled='true') Record
+      button#playChordProgressionButton(disabled='true') Play
       button#stopChordProgressionButton(disabled='true') Stop
 
       .chordProgression
