--- a/client/notepad/notepad.styl
+++ b/client/notepad/notepad.styl
@@ -91,7 +91,24 @@ body
   color rgb(33, 199, 148)
 
 .switch i.active
-    color #CB30BD
+  color #CB30BD
+
+.leds
+  display inline-block
+  margin-left 20px
+
+.led-blue
+  display inline-block
+  width: 12px
+  height: 12px
+  background-color: #235c9d
+  border-radius: 50%
+  box-shadow: #000 0 -1px 7px 1px, inset #006 0 -1px 9px, #06F 0 2px 14px
+  position relative
+  top -5px
+
+  &.active
+    background-color #99d5f8
 
 .title
   float right
@@ -132,7 +149,6 @@ body
 
 .file
   text-align center
-  margin-top 40px
 
 .file > div
   display inline-block
@@ -149,6 +165,10 @@ body
   transform translateX(100%)
   transition transform 0.4s ease
   background-color #322831
+  opacity 0
+
+[id$='ChordProgressionButton']
+  padding 0 5px
 
 .second-menu.active
   transform translateX(0)
