--- a/client/notepad/notepad.styl
+++ b/client/notepad/notepad.styl
@@ -106,6 +106,7 @@ body
   box-shadow: #000 0 -1px 7px 1px, inset #006 0 -1px 9px, #06F 0 2px 14px
   position relative
   top -5px
+  margin-right 5px
 
   &.active
     background-color #99d5f8
@@ -166,6 +167,9 @@ body
   transition transform 0.4s ease
   background-color #322831
   opacity 0
+
+.tempo .range-field
+  transform rotate(180deg)
 
 [id$='ChordProgressionButton']
   padding 0 5px
