--- a/client/notepad/notepad.styl
+++ b/client/notepad/notepad.styl
@@ -93,6 +93,17 @@ body
 .switch i.active
   color #CB30BD
 
+.transport
+  margin-left 20px
+  display inline-block
+
+.transport .btn
+  height 25px
+
+.transport i
+  position: relative
+  top: -7px
+
 .leds
   display inline-block
   margin-left 20px
@@ -171,7 +182,7 @@ body
 .tempo .range-field
   transform rotate(180deg)
 
-[id$='ChordProgressionButton']
+.transport .btn
   padding 0 5px
 
 .second-menu.active
@@ -179,6 +190,7 @@ body
 
 .dropdown-content
   max-height 220px
+  z-index 2
 
 .dropdown-content li
   line-height 0.7
