--- a/client/templates/notepad/notepad.jade
+++ b/client/templates/notepad/notepad.jade
@@ -20,7 +20,7 @@ template(name='notepad')
         a#record.waves-effect.waves-light.btn.purple
           i.mdi-image-lens
 
-        a#playChordProgressionButton.waves-effect.waves-light.btn(disabled='true')
+        a#playChords.waves-effect.waves-light.btn(disabled='true')
           i.mdi-av-play-arrow
 
       .leds
