--- a/client/templates/users/users.styl
+++ b/client/templates/users/users.styl
@@ -7,6 +7,12 @@ header
   a
     color #21C794
 
+.currentSetting
+  color: white
+  margin-left: 54px
+  display: inline-block
+  font-size: 2em
+
 .login-buttons
   float right
   padding-right 50px
