--- a/client/templates/notepad/notepad.styl
+++ b/client/templates/notepad/notepad.styl
@@ -32,13 +32,14 @@ body
   background-color #2f2f2f
 
 .github
-  position absolute
-  top 15px
-  left 15px
-  color silver
-  cursor pointer
-  transition color 0.3s ease
-  z-index 2
+  position: absolute
+  top: 15px
+  left: -36px
+  color: #ddd
+  cursor: pointer
+  transition: color 0.3s ease
+  z-index: 2
+  font-size: 0.32em
 
 .github:hover
   color rgb(33, 199, 148)
@@ -166,7 +167,12 @@ body
   z-index 0
 
 .file
-  text-align center
+  text-align: center
+  display: inline-block
+  font-size: 0.7em
+  margin-left: 15px
+  position: relative
+  top: -5px
 
 .file > div
   display inline-block
