--- a/client/templates/modals/modals.jade
+++ b/client/templates/modals/modals.jade
@@ -1,9 +1,64 @@
 template(name='modals')
   #help.modal
     .modal-content
-      h4 Welcome!
-      p.
-        Cupidatat velit magna id esse consectetur. Eu ea velit occaecat tempor veniam minim non incididunt adipisicing consectetur officia qui in. Fugiat qui ut exercitation dolor excepteur elit ad amet do consectetur. Occaecat officia adipisicing officia velit dolore tempor do. Anim sunt sit amet in incididunt non laboris sint minim consectetur ipsum elit. Qui id ex consectetur magna sint consectetur proident aliquip nulla Lorem nostrud enim quis nisi.
+      h1 For Those Who Hate Manuals...
+      .card.blue-grey
+        .card-content.white-text
+          span.card-title Just Jam
+          p Click on the grey bars in the centre of the screen.
+      h1 For Those Who Like Manuals
+      .card.blue-grey
+        .card-content.white-text
+          span.card-title Log In
+          p Go to upper Right and click 'Sign In'.
+          p Follow instructions from there
+      .card.blue-grey
+        .card-content.white-text
+          span.card-title Sign Up
+          p Click the 'Sign Up' link at top right of app. Enter Username/Password
+          p Press 'Sign Up' button
+      h1 Default Panel
+      .card.blue-grey
+        .card-content.white-text
+          span.card-title Controls
+          p On the default settings panels are following options
+          ul
+            li Volume: This controls the overall volume
+            li Octave: Default is 2 ( middle C range )
+            li Instrument Sound: Sine, Sawtooth, or Square
+            li Decay: Add decay for a smoother transition between notes
+      .card.blue-grey
+        .card-content.white-text
+          span.card-title Modes
+          p Think of this as 'key types' like Major or Minor. Only with more options
+      .card.blue-grey
+        .card-content.white-text
+          span.card-title Modes
+          p Think of this as 'key types' like Major or Minor. Only with more options
+      h1 Left Panel
+      .card.blue-grey
+        .card-content.white-text
+          span.card-title Tempo
+          p Use the slider to adjust the tempo of the playback
+      .card.blue-grey
+        .card-content.white-text
+          span.card-title Backing Chord Progression
+          p This will select the backing track's chord progression
+      .card.blue-grey
+        .card-content.white-text
+          span.card-title Key
+          p Right now the default Key is 'A'
+      .card.blue-grey
+        .card-content.white-text
+          span.card-title Backing instrument
+          p Instrument type for accompaniment. Default 'Organ'
+      h1 Top row controls
+      .card.blue-grey
+        .card-content.white-text
+          span.card-title Record/Playback
+          p Playback starts backing track. Record starts recording
+
+
 
   #save.modal
     .modal-content
